Compiler/testdata/prometheus-tests/negatives/Negative1.java
class Klasse1{
	public int main() {
		/* Missing Statement; without else */
		if ( true )
	}
}
